# lena

./: .gitignore  .gitkeep  .gitmodules  code_of_conduct.md  license  readme.md  readme_ru.md  security.md
lena/: .gitignore  CMakeLists.txt  build_lena.sh  build_lena_lx64.sh  makefile  meson.build  run_lena_lx64.sh
lena-abi/: meson.build
lena-abi/include/: lena-abi.h
lena-abi/src/: lena-abi.c
lena-compiler/: .gitignore  meson.build
lena-compiler/include/: lena-ast.h  lena-codegen.h  lena-compiler.h  lena-tokenizer.h  lena-util.h
lena-compiler/src/: lena-codegen.c  lena-compiler.c  lena-parser.c  lena-runtime.c  lena-tokenizer.c  lena-util.c
lena/include/: lena.h
lena/include/compiler/: compiler.h
lena/include/compiler/errors/: errors.enum.h  errors.h
lena/include/compiler/files/: files.h
lena/include/compiler/flags/: flags.enum.h  flags.h
lena/include/compiler/info/: config.h  info.h
lena/include/compiler/msg/: errors.h  msg.h
lena/lena/: lena
lena/lena/linux64/: lena
lena/lena/modules/: list.em
lena/lena/modules/console/: console.em
lena/lena/modules/os/: os.em
lena/lena_api/examples/: stdio.c  strx64.c
lena/lexer/docs/: list_of_tokens.txt
lena/lexer/include/: lexer.h
lena/scripts/: arch-flags.js  clean.js  date.js  find.js  os-flags.js  out.js
lena/scripts/assets/: os-flags.json  out.json
lena/scripts/scripts/assets/: out.json
lena/src/: lena.c  lena.d  lena.h  lena.s  main.c  main.s
lena/src/compiler/: compiler.c  compiler.s
lena/src/compiler/errors/: errors.c  errors.s
lena/src/compiler/flags/: flags.c  flags.s
lena/src/compiler/info/: info.c  info.s
lena/src/compiler/msg/: errors.c  msg.c
lena/src/config/: config.h
lena/src/errors/: errors.h  errors_file.h
lena/src/interpreter/: lena_interpreter.h  version.h
lena/src/interpreter/analyzer/: analyzer.h
lena/src/interpreter/executor/: executor.d
lena/src/interpreter/initializer/: initializer.d
lena/src/interpreter/largs/: largs.h  largs_errors.h  largsno.c  largsno.h
lena/src/interpreter/lconfig/: lconfig.h
lena/src/interpreter/ldebug/: ldebug.h
lena/src/interpreter/lerrors/: lerrno.h  lerror.h
lena/src/lconsole/: lconsole.c  lconsole.d  lconsole.h  lconsole_color.c  lconsole_color.d  lconsole_color.h
lena/src/ldelay/: ldelay.c  ldelay.d  ldelay.h
lena/src/lerrors/: lerrno.h  lerror.h
lena/src/lfiles/: lfiles.d  lfiles.h  lfiles_errors.h
lena/src/lthreads/: lthreads.c  lthreads.d  lthreads.h
lena/src/ltypes/: lchar.d  lchar.h  lstring.c  lstring.d  lstring.h  ltypes.h
lena/src/parser/: parser.h  util_p.h
lena/src/stdconsole/: stdconsole.c  stdconsole.h  stdconsole_color.c  stdconsole_color.h
lena/src/stdout/: stdout.h
lena/src/util/: lapp.h  lchar.h  lconverter.c  lconverter.d  lconverter.h
lena/union/include/: lena.h
lena/union/src/: lena.c
shrd-abi/: .gitignore  meson.build
shrd-abi/include/: shrd-abi.h
shrd-abi/src/: shrd-abi.c
(+276 files in other folders)
